--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 <script src="js/shelters.js"></script>
 <script src="js/map.js"></script>
 <script src="js/navigation.js"></script>
+<script src="js/current_location.js"></script>
 </body>
 </html>
