--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div id="container">
 <div id="shelter-list"></div>
 <div id="map"></div>
+<div id="current-location-btn">📍</div>
 </div>
 
 <!-- コピーライト -->
