--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <!-- メインコンテナ -->
 <div id="container">
 <div id="shelter-list"></div>
+<div id="shelter-detail" class="shelter-detail" style="display:none;">
+    <button id="close-detail">閉じる</button>
+    <div id="detail-content"></div>
+</div>
 <div id="map"></div>
 </div>
 
