--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- APIキー -->
 <script>
-    const GOOGLE_MAPS_API_KEY = "hogehoge";
+    const GOOGLE_MAPS_API_KEY = "AIzaSyDXnEdO-AhnxDLo_w-mrUdO8_kJMMndgM0";
     const script = document.createElement('script');
     script.src = `https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAPS_API_KEY}&callback=initMap`;
     script.defer = true;
