--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
 <script src="js/shelters.js"></script>
 <script src="js/map.js"></script>
 <script src="js/navigation.js"></script>
+
+<div id="disaster-info">読み込み中...</div>
+<script src="js/disaster-info.js"></script>
 </body>
 </html>
