--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <!-- ヘッダー -->
-<div id="header">hinavi</div>
+<div id="header">
+  <div>hinavi</div>
+  <button id="recenter-btn" onclick="recenterMap()"> 現在地に戻る</button>
+</div>
 <!-- メインコンテナ -->
 <div id="container">
 <div id="shelter-list"></div>
