--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
 
   <!-- メインコンテナ -->
   <div id="container">
+    <!-- 避難所カードリスト -->
     <div id="shelter-list"></div>
 
-    <div id="shelter-detail" class="shelter-detail" style="display:none;">
-      <button id="close-detail">閉じる</button>
-      <div id="detail-content"></div>
-    </div>
-
+    <!-- Google Map -->
     <div id="map"></div>
   </div>
 
